--- a/.github/workflows/generate_readme.yml
+++ b/.github/workflows/generate_readme.yml
@@ -47,13 +47,17 @@ jobs:
 
       - name: Generate new md # if you fork or clone this repo, please delete the curl line unless you know why
         run: |
+          echo ${{github.repository}}
           source venv/bin/activate
-          python main.py ${{ secrets.G_T }} ${{ github.repository }} --issue_number '${{ github.event.issue.number }}'   
+          python main.py ${{ secrets.G_T }} ${{ github.repository }}
           
       - name: Push README
-        run: |
-          git config --local user.email "${{ env.GITHUB_EMAIL }}"
-          git config --local user.name "${{ env.GITHUB_EMAIL }}"
-          git commit -a -m 'update new blog' || echo "nothing to commit"
-          git push || echo "nothing to push"     
+        uses: github-actions-x/commit@v2.6
+        with:
+          github-token: ${{ secret.G_T }}
+          commit-message: "Refresh README"
+          files: README.md
+          rebase: 'true'
+          name: jannahuang 
+          email: jannajanna@126.com
 
