--- a/.github/workflows/generate_readme.yml
+++ b/.github/workflows/generate_readme.yml
@@ -8,12 +8,12 @@ on:
     types: [created, edited]
   push:
     branches:
-      - master
+      - main   
     paths:
       - main.py
 
 env:
-  GITHUB_NAME: jannahuang
+  GITHUB_NAME: jannahuang  
   GITHUB_EMAIL: jannajanna@126.com
 
 jobs:
@@ -36,7 +36,6 @@ jobs:
           key: pip-1-${{ hashFiles('**/requirements.txt') }}
           restore-keys: |
             pip-
-
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
@@ -47,17 +46,12 @@ jobs:
 
       - name: Generate new md # if you fork or clone this repo, please delete the curl line unless you know why
         run: |
-          echo ${{github.repository}}
           source venv/bin/activate
-          python main.py ${{ secrets.G_T }} ${{ github.repository }}
+          python main.py ${{ secrets.G_T }} ${{ github.repository }} --issue_number '${{ github.event.issue.number }}'   
           
       - name: Push README
-        uses: github-actions-x/commit@v2.6
-        with:
-          github-token: ${{ secret.G_T }}
-          commit-message: "Refresh README"
-          files: README.md
-          rebase: 'true'
-          name: jannahuang 
-          email: jannajanna@126.com
-
+        run: |
+          git config --local user.email "${{ env.GITHUB_EMAIL }}"
+          git config --local user.name "${{ env.GITHUB_EMAIL }}"
+          git commit -a -m 'update new blog' || echo "nothing to commit"
+          git push || echo "nothing to push"     
