--- a/.github/workflows/generate_readme.yml
+++ b/.github/workflows/generate_readme.yml
@@ -52,6 +52,7 @@ jobs:
       - name: Push README
         run: |
           git config --local user.email "${{ env.GITHUB_EMAIL }}"
-          git config --local user.name "${{ env.GITHUB_EMAIL }}"
-          git commit -a -m 'update new blog' || echo "nothing to commit"
+          git config --local user.name "${{ env.GITHUB_NAME }}"
+          git add -A
+          git commit -m 'update new blog' || echo "nothing to commit"
           git push || echo "nothing to push"     
