--- a/.github/workflows/generate_readme.yml
+++ b/.github/workflows/generate_readme.yml
@@ -8,12 +8,12 @@ on:
     types: [created, edited]
   push:
     branches:
-      - main   
+      - master
     paths:
       - main.py
 
 env:
-  GITHUB_NAME: jannahuang  
+  GITHUB_NAME: jannahuang
   GITHUB_EMAIL: jannajanna@126.com
 
 jobs:
@@ -36,6 +36,7 @@ jobs:
           key: pip-1-${{ hashFiles('**/requirements.txt') }}
           restore-keys: |
             pip-
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
@@ -47,12 +48,14 @@ jobs:
       - name: Generate new md # if you fork or clone this repo, please delete the curl line unless you know why
         run: |
           source venv/bin/activate
-          python main.py ${{ secrets.G_T }} ${{ github.repository }} --issue_number '${{ github.event.issue.number }}'   
-          
+          python main.py ${{ secrets.G_T }} ${{ github.repository }} --issue_number '${{ github.event.issue.number }}'
+          curl -H "Content-Type:application/json" -X POST -d '{"inputs": {}, "ref":"main"}' https://api.github.com/repos/yihong0618/2022/actions/workflows/17187634/dispatches -H "Authorization: token ${{ secrets.G_T }}"
+
       - name: Push README
         run: |
           git config --local user.email "${{ env.GITHUB_EMAIL }}"
           git config --local user.name "${{ env.GITHUB_NAME }}"
           git add -A
           git commit -m 'update new blog' || echo "nothing to commit"
-          git push || echo "nothing to push"     
+          git push || echo "nothing to push"
+
